examples/src/main/java/eu/binarystars/cleancode/errors/ErrorCode.java
package eu.binarystars.cleancode.errors;

public enum ErrorCode {
    INTERNAL_ERROR,
    VALIDATION_ERROR,
}
